--- a/Node Package Manager (npm)/npm_project/package.json
+++ b/Node Package Manager (npm)/npm_project/package.json
@@ -1,14 +1,15 @@
 {
-  "name": "npm_project",
+  "name": "npm-project",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "marku",
   "license": "ISC",
   "dependencies": {
-    "moment": "^2.29.4"
+    "moment": "^2.29.4",
+    "semver": "^7.5.0"
   }
 }
